crates/ferrum-interfaces/tests/ui/vnext/fail/stale_sequence_completion_cannot_target_new_epoch.rs
use ferrum_interfaces::vnext::*;

fn attack<R: DeviceRuntime>(
    first: SynchronizedSequencePermit<'_, '_, R>,
    second: SynchronizedSequencePermit<'_, '_, R>,
) {
    let stale = first.complete().unwrap();
    let _ = second.complete(stale);
}

fn main() {}
